# factors

./: .gitignore  .parcelrc  README.md  bootstrap.dhall  cabal.project  chanterelle.json  flake.nix  package-lock.json  package.json  packages.dhall  spago-deploy.dhall  spago.dhall
app/App/: Component.purs  Form.purs
app/Contracts/: Groth16Verifier.purs
app/Prover/: Prove.js  Verify.js  Verify.purs
contracts/: Verifier.sol
deploy/Deploy/: ContractConfig.purs
factors/: factors.cabal
factors-solver/: build-wasm.sh  cabal.project  factors-solver.cabal
factors-solver/app/: Main.hs
factors-solver/cbits/: init.c
factors/app/: Main.hs
factors/cli/: Main.hs
factors/compile/: Main.hs
factors/factors-output/: circuit.r1cs
factors/native-solver/: Main.hs
factors/src/ZK/: Factors.hs
factors/src/ZK/Factors/: Circuit.hs  Witness.hs
factors/test/: Main.hs
src/: Main.purs  Prove.js  Prove.purs
src/App/: Button.purs  Component.purs  Form.purs
src/Prover/: Prove.purs  Types.purs  Verify.purs
trusted-setup/: circuit.r1cs
wasm/: .gitignore  build-wasm.sh  cabal.project  default.nix  factors-solver.cabal
wasm-solver/: build-wasm.sh  cabal.project  default.nix  factors-solver.cabal
wasm-solver/app/: Main.hs
wasm/app/: Main.hs
www/: circuit_final.zkey  index.html  index.js  input.json  witness.wtns
