cabal-version: 3.0
name:          factors
version:       0.1.0.0
author:        martyall
maintainer:    martyall@protonmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall

common extensions
  default-extensions:
    DataKinds
    TypeApplications
    NoImplicitPrelude
    NamedFieldPuns
    RecordWildCards
    OverloadedStrings

common deps
  build-depends:
      protolude
    , arithmetic-circuits
    , arithmetic-circuits:circom-compat
    , arithmetic-circuits:language
    , base
    , containers
    , galois-field

library
  import:           warnings, extensions, deps
  exposed-modules:  ZK.Factors


  hs-source-dirs:   src
  default-language: GHC2021

executable factors-cli
  import:           warnings, extensions, deps
  main-is:          Main.hs
  build-depends:
      factors

  hs-source-dirs:   cli
  default-language: GHC2021

test-suite factors-test
  import:           warnings, extensions, deps
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
      binary
    , factors
    , hspec
    , QuickCheck
