cabal-version: 3.0
name:          wasm-solver
version:       0.0.0.0

executable wasm-solver
  main-is:          Main.hs
  c-sources:        cbits/init.c
  hs-source-dirs:   app
  default-language: GHC2021
  default-extensions: 
    NoImplicitPrelude
    BlockArguments
    OverloadedStrings
    RecordWildCards
  ghc-options:
    -Wall -Wunused-packages -no-hs-main -optl-mexec-model=reactor
    "-optl-Wl, --export=hs_init, --export=init,--export=getNVars,--export=getVersion,--export=getRawPrime,--export=writeSharedRWMemory,--export=readSharedRWMemory,--export=getFieldNumLen32,--export=setInputSignal,--export=getInputSignalSize,--export=getWitnessSize,--export=getWitness,--export=getInputSize"

  build-depends:
      arithmetic-circuits:circom-compat
    , arithmetic-circuits:language
    , base            >=4.10  && <5
    , binary
    , factors
    , protolude
